# DeGenSON

./: .travis.yml  README.rst  setup.cfg  tox.ini
degenson/: __init__.py  __main__.py
degenson/schema/: builder.py  node.py
degenson/schema/strategies/: __init__.py  base.py  discriminated.py  object.py  scalar.py
genson/: __init__.py  __main__.py
genson/schema/: builder.py
genson/schema/strategies/: __init__.py  array.py  base.py  scalar.py
test/: base.py  test_add_multi.py  test_add_single.py  test_bin.py  test_builder.py  test_custom.py  test_discriminated.py  test_formatted_types.py  test_gen_multi.py  test_gen_single.py  test_misuse.py  test_seed_schema.py
test/fixtures/: base_schema.json  cp1252.json  utf-8.json
