[metadata]
name = degenson
version = attr: degenson.__version__
author = ryn-cx
license = MIT
description = DeGenSON is a fork of GenSON that adds additional schema strategies.
long_description = file: README.rst, HISTORY.rst, AUTHORS.rst
long_description_content_type = text/x-rst
keywords =
    json, schema, json-schema, jsonschema, object, generate
    generator, builder, merge, draft 7, validate, validation
url = https://github.com/ryn-cx/degenson/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: File Formats :: JSON :: JSON Schema
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.packages.find]
include = degenson*

[options.entry_points]
console_scripts = degenson = degenson.__main__:main

[bdist_wheel]
universal = 0

[global]
verbose = False
